# C_Challenges

./: .gitignore  CMakeLists.txt  README.md  tester.sh
allocation/src/: allocation.bkp.c  allocation.c
arrays/: CMakeLists.txt  test.sh
arrays/src/: arrays.c
arrays/test/: tests.cpp
bitmap/src/: bitmap.bkp.c  bitmap.c
debug/src/: debug.c
error_handling/include/: error_handling.h
error_handling/src/: error_handling.bkp.c  error_handling.c
error_handling/test/: tests.cpp
strings/: CMakeLists.txt
strings/src/: sstring.c  strings.bkp.c  strings.c
strings/test/: tests.cpp
structures/src/: structures.bkp.c  structures.c
system_programming/: CMakeLists.txt
system_programming/src/: system_programming.bkp.c  system_programming.c
system_programming/test/: tests.cpp
